add create repo command to github client
